recursion.cons.lessons.recursion.cons.Concat.scala.error
concat:23: error: missing arguments for method last;
follow this method with `_' if you want to treat it as a partially applied function
  } else return concat(butLast(l1), last::l2)
                                    ^